# ctf-buster

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  flake.nix
.devcontainer/: devcontainer.json
docs/: architecture.md  configuration.md  integration.md  mcp-tools.md  security-tools.md  workflow.md
src/: error.rs  main.rs
src/cli/: auth.rs  challenge.rs  mod.rs  scoreboard.rs  submit.rs  workspace.rs
src/config/: mod.rs  types.rs
src/mcp/: mod.rs  types.rs
src/output/: table.rs
src/platform/: ctfd.rs  mock.rs  mod.rs  rctf.rs  types.rs
src/tui/: app.rs  ui.rs
src/workspace/: mod.rs  scaffold.rs  state.rs
tools/: ctf_binary.py  ctf_crypto.py  ctf_forensics.py  ctf_gdb.py  ctf_jail.py  ctf_pwn.py  ctf_rev.py
tools/tests/: test_binary.py  test_crypto.py  test_forensics.py  test_gdb.py  test_jail.py  test_pwn.py  test_re.py  test_rev.py  test_subprocess_utils.py
